# towpath

./: .gitignore  README.md  pound-engine-design.md  progress.md  pyproject.toml
docs/superpowers/plans/: 2026-06-21-pound-ingest-scaffolding.md  2026-06-22-pound-graph-build-and-routing.md  2026-06-28-boatability-filter-and-phase3-perf.md
docs/superpowers/plans/briefs/: final-review.md  scope-d-pr1-task-1-report.md  task-1-brief.md  task-1-report.md  task-2-brief.md  task-2-report.md  task-3-brief.md  task-3-report.md  task-4-brief.md  task-4-report.md  task-5-brief.md  (+7 more)
docs/superpowers/specs/: 2026-06-25-pound-bulk-ingest-and-routing-design.md  2026-06-28-boatability-filter-and-phase3-perf-design.md
pound/: __init__.py  plan.py  schemas.py
pound/data/: overrides.json
pound/graph/: artifact.py  build.py  gazetteer.py  locks.py
pound/ingest/: __init__.py  cli.py  filters.py  ir.py  osm.py  overpass.py  prune.py  summarize.py
pound/route/: cost.py  plan.py  snap.py
pound/validate/: connectivity.py
tests/: conftest.py  test_plan_stub.py  test_schemas.py  test_smoke.py
tests/fixtures/: __init__.py  oxford_overpass_sample.json  staircase_overpass_sample.json  tiny_bulk.osm
tests/graph/: test_artifact.py  test_build.py  test_build_bulk.py  test_gazetteer.py  test_locks.py
tests/ingest/: test_cli.py  test_filters.py  test_ir.py  test_network.py  test_osm.py  test_osm_argv.py  test_overpass.py  test_pipeline_integration.py  test_prune.py  test_summarize.py
tests/route/: test_cost.py  test_plan_route.py  test_snap.py
tests/validate/: test_connectivity.py
