[project]
name = "pound"
version = "0.1.0"
description = "Pound — deterministic routing engine for UK inland waterways"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.11",
  "requests>=2.31", # offline ingest ONLY; never on the request-time path
  "networkx>=3.3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6"]

[project.scripts]
pound-ingest = "pound.ingest.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pound"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "network: tests that hit the live Overpass API (deselect by default; use --run-network)",
]
addopts = "-ra"
